# onlyerror

./: Cargo.toml  LICENSE  MSRV.md  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
compile_tests/: compiler.rs  empty.rs  multiple_non_signed.rs  multiple_non_signed.stderr  multiple_one_non_signed.rs  multiple_one_non_signed.stderr  multiple_variant.rs  no_display.rs  no_display_no_impl.rs  no_display_no_impl.stderr  one_comment.rs  one_non_signed.rs  one_non_signed.stderr  one_param.rs  skip_positional.rs
examples/: basic.rs
src/: lib.rs  parser.rs
