[package]
name = "onlyerror"
description = "Obsessively tiny error derive macro"
version = "0.1.2"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/parasyte/onlyerror"
edition = "2021"
rust-version = "1.62.0"
keywords = ["error", "derive", "error-handling"]
categories = ["no-std", "rust-patterns"]
license = "MIT"

[features]
default = ["std"]
std = []

[lib]
proc-macro = true

[[test]]
name = "compile_and_fail"
path = "compile_tests/compiler.rs"

[dependencies]
myn = "0.1"

[dev-dependencies]
error-iter = "0.4"
trybuild = "1.0.80"
